# qt-apps-boot2qt-appcontroller

./: .cmake.conf  .gitignore  CMakeLists.txt  README  app.cpp  app.h  appcontroller.pro  appdaemon.pro  daemon.cpp  daemon.h  main.cpp  perfprocesshandler.cpp  perfprocesshandler.h  portlist.cpp  portlist.h  process.cpp  process.h  protocol.cpp  protocol.h
